--- a/NancyAspNetHost1/NancyAspNetHost.csproj
+++ b/NancyAspNetHost1/NancyAspNetHost.csproj
@@ -102,8 +102,10 @@
     <Content Include="Content\SignalR.StockTicker\jquery.color-2.1.2.min.js" />
     <Content Include="Content\SignalR.StockTicker\SignalR.StockTicker.js" />
     <Content Include="Content\SignalR.StockTicker\StockTickerAjax.html" />
-    <Content Include="Content\AjaxReport.html" />
     <Content Include="Content\SignalR.StockTicker\StockTicker.css" />
+    <Content Include="Content\AjaxReport.html" />
+    <Content Include="Content\StockTicker.css" />    
+    <Content Include="Content\jquery-1.10.2.min.js" />
     <Content Include="Content\SignalR.StockTicker\StockTicker.html" />
     <Content Include="icon.png" />
     <Content Include="Content\SignalR.StockTicker\jquery.signalR-2.2.2.js" />
