--- a/NancyAspNetHost1/NancyAspNetHost.csproj
+++ b/NancyAspNetHost1/NancyAspNetHost.csproj
@@ -106,6 +106,9 @@
     <Content Include="icon.png" />
     <Content Include="Content\SignalR.StockTicker\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
+    <Content Include="Content\AjaxReport.html" />
+    <Content Include="Content\StockTicker.css" />    
+    <Content Include="Content\jquery-1.10.2.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
