--- a/NancyAspNetHost1/NancyAspNetHost.csproj
+++ b/NancyAspNetHost1/NancyAspNetHost.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -101,6 +101,7 @@
     <Content Include="Content\SignalR.StockTicker\jquery-1.10.2.min.js" />
     <Content Include="Content\SignalR.StockTicker\jquery.color-2.1.2.min.js" />
     <Content Include="Content\SignalR.StockTicker\SignalR.StockTicker.js" />
+    <Content Include="Content\SignalR.StockTicker\StockTickerAjax.html" />
     <Content Include="Content\SignalR.StockTicker\StockTicker.css" />
     <Content Include="Content\SignalR.StockTicker\StockTicker.html" />
     <Content Include="icon.png" />
